language/move-lang/tests/move_check/typing/declare_duplicate_binding.move
module M {
    resource struct R {f: u64}

    t0() {
        let (x, x);
        let (f, R{f}, f);
    }
}
